2010-10-05  Fady Samuel  <fsamuel@chromium.org>

Reviewed by Darin Adler.

        REGRESSION (r65539): One pixel white gaps when scrolling Trac changeset pages
        https://bugs.webkit.org/show_bug.cgi?id=45131

        Added a layout test to check for paint rects that touch the border of an adjacent sell,
        when border-collapse: separate is set for the table.

        * fast/table/simple_paint.html:
            Don't do rtl as it doesn't exercise some of the new  paint code.
        * fast/table/simple_paint_separate_borders-expected.checksum: Added.
        * fast/table/simple_paint_separate_borders-expected.png: Added.
        * fast/table/simple_paint_separate_borders-expected.txt: Added.
        * fast/table/simple_paint_separate_borders.html: Added.
2010-10-05  Fady Samuel  <fsamuel@chromium.org>

        Reviewed by Darin Adler.

        REGRESSION (r65539): One pixel white gaps when scrolling Trac changeset pages
        https://bugs.webkit.org/show_bug.cgi?id=45131

        When border-collapse: separate property is set on the table, paintObject
        may skip repainting cells, if the dirty region only touches one row/col of pixels.

        Test: fast/table/simple_paint_separate_borders.html

        * rendering/RenderTableSection.cpp:
        (WebCore::RenderTableSection::paintObject):
            Don't subtract one from the right and bottom of the dirty paint rect.

Canonical link: https://commits.webkit.org/59767@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69161 268f45cc-cd09-0410-ab3c-d52691b4dbfc